Introduce GridUtil and SignalUtil